--- a/resources/languages/lang_eng.txt
+++ b/resources/languages/lang_eng.txt
@@ -26,6 +26,7 @@ MSG_LOANS_IN_YEAR -@ Number of loans by year:
 MSG_MOST_LENT_MEDIA_IN_YEAR -@ The most lent media by year: 
 MSG_EXTENSIONS_IN_YEAR -@ Number of extensions by year: 
 MSG_USER_LOANS_IN_YEAR -@ Number of user loans by year: 
+MSG_CHOOSE_YEAR -@ Please choose the starting year -> 
 PROMPT_FIRST_NAME -@ First name (please insert a valid first name): 
 PROMPT_LAST_NAME -@ Last name (please insert a valid last name): 
 PROMPT_USERNAME -@ Username: 
@@ -33,7 +34,8 @@ PROMPT_PASSWORD -@ Password:
 PROMPT_BIRTHDAY -@ Birthday (accepted format -@ DD/MM/YYYY): 
 PROMPT_PRESENT_USER_MULTIPLE_CHOICE -@ (1) EXIT WITHOUT SAVING\t|\t(2) CHANGE FIELDS
 PROMPT_BIBLIO_INITIAL_CHOICES -@ (1) LOGIN\t|\t(2) SIGN UP\t|\t(3) EXIT
-PROMPT_OPERATOR_CHOICES -@ (1) ADD A MEDIA ITEM\t|\t(2) REMOVE A MEDIA ITEM\t|\t(3) SHOW MEDIA ITEMS BY FOLDER\t|\t(4) SEARCH FOR MEDIA ITEMS\t|\t(5) SHOW ALL SUBSCRIBED USERS\t|\t(6) SHOW ALL LOANS\t|\t(7) SHOW LOANS NUMBER BY YEAR\t|\t(8) SHOW USER LOANS NUMBER BY YEAR\t|\t(9) SHOW LOAN EXTENSIONS NUMBER BY YEAR\t|\t(10) SHOW THE MOST LENT MEDIA\t|\t(11) LOGOUT
+PROMPT_OPERATOR_CHOICES -@ (1) ADD A MEDIA ITEM\t|\t(2) REMOVE A MEDIA ITEM\t|\t(3) SHOW MEDIA ITEMS BY FOLDER\t|\t(4) SEARCH FOR MEDIA ITEMS\t|\t(5) VISUALIZE DATA\t|\t(6) LOGOUT
+PROMPT_DATA_VISUALIZATION_CHOICES -@ (1) SHOW ALL SUBSCRIBED USERS\t|\t(2) SHOW ALL LOANS\t|\t(3) SHOW THE NUMBER OF LOANS BY YEAR\t|\t(4) SHOW THE NUMBER OF LOANS BY USER AND YEAR\t|\t(5) SHOW THE NUMBER OF LOAN EXTENSIONS BY YEAR\t|\t(6) SHOW THE MOST LENT MEDIA ITEM
 PROMPT_CUSTOMER_CHOICES -@ (1) RENEW YOUR SUBSCRIPTION!\t|\t(2) REQUEST A LOAN\t|\t(3) EXTEND YOUR LOAN\t|\t(4) SEARCH FOR MEDIA ITEMS\t|\t(5) LOGOUT
 PROMPT_SIGN_UP_CONFIRMATION -@ Are you sure you want to submit this form? (y/n)
 PROMPT_REMOVE_CONFIRMATION -@ Are you sure you want to remove this media item? (y/n)
