--- a/resources/languages/lang_ita.txt
+++ b/resources/languages/lang_ita.txt
@@ -26,6 +26,7 @@ MSG_LOANS_IN_YEAR -@ Numero di prestiti per anno solare:
 MSG_EXTENSIONS_IN_YEAR -@ Numero di proroghe per anno solare: 
 MSG_USER_LOANS_IN_YEAR -@ Numero di prestiti per utente per anno solare: 
 MSG_MOST_LENT_MEDIA_IN_YEAR -@ Media maggiormente concesso in prestito per anno solare: 
+MSG_CHOOSE_YEAR -@ Inserire l'anno di partenza -> 
 PROMPT_FIRST_NAME -@ Nome (si prega di inserire un nome valido): 
 PROMPT_LAST_NAME -@ Cognome (si prega di inserire un cognome valido): 
 PROMPT_USERNAME -@ Username: 
@@ -33,7 +34,8 @@ PROMPT_PASSWORD -@ Password:
 PROMPT_BIRTHDAY -@ Compleanno (formato accettato -@ GG/MM/AAAA): 
 PROMPT_PRESENT_USER_MULTIPLE_CHOICE -@ (1) USCIRE SENZA SALVARE\t|\t(2) CAMBIARE I CAMPI
 PROMPT_BIBLIO_INITIAL_CHOICES -@ (1) ENTRA\t|\t(2) REGISTRATI\t|\t(3) ESCI
-PROMPT_OPERATOR_CHOICES -@ (1) AGIUNGI UN MEDIA\t|\t(2) RIMUOVI UN MEDIA\t|\t(3) MOSTRA I MEDIA PER CARTELLE\t|\t(4) CERCA MEDIA\t|\t(5) MOSTRA TUTTI GLI UTENTI ISCRITTI\t|\t(6) MOSTRA TUTTI I PRESTITI EFFETTUATI\t|\t(7) ESCI
+PROMPT_OPERATOR_CHOICES -@ (1) AGIUNGI UN MEDIA\t|\t(2) RIMUOVI UN MEDIA\t|\t(3) MOSTRA I MEDIA PER CARTELLE\t|\t(4) CERCA MEDIA\t|\t(5) VISUALIZZA DATI\t|\t(6) ESCI
+PROMPT_DATA_VISUALIZATION_CHOICES -@ (1) MOSTRA TUTTI GLI UTENTI ISCRITTI\t|\t(2) MOSTRA TUTTI I PRESTITI EFFETTUATI\t|\t(3) MOSTRA NUMERO DI PRESTITI PER ANNO SOLARE\t|\t(4) MOSTRA NUMERO DI PRESTITI PER UTENTE E ANNO SOLARE\t|\t(5) MOSTRA NUMERO DI PROROGHE PER ANNO SOLARE\t|\t(6) MOSTRA IL MEDIA PIÙ PRESTATO
 PROMPT_CUSTOMER_CHOICES -@ (1) RINNOVA LA TUA ISCRIZIONE!\t|\t(2) RICHIEDI UN PRESTITO\t|\t(3) RICHIEDI UNA PROROGA\t|\t(4) CERCA UNA RISORSA\t|\t(5) ESCI
 PROMPT_SIGN_UP_CONFIRMATION -@ Confermi l'iscrizione? (y/n)
 PROMPT_REMOVE_CONFIRMATION -@ Confermi la rimozione? (y/n)
