--- a/resources/languages/lang_eng.txt
+++ b/resources/languages/lang_eng.txt
@@ -26,12 +26,13 @@ MSG_LOANS_IN_YEAR -@ Number of loans by year:
 MSG_MOST_LENT_MEDIA_IN_YEAR -@ The most lent media by year: 
 MSG_EXTENSIONS_IN_YEAR -@ Number of extensions by year: 
 MSG_USER_LOANS_IN_YEAR -@ Number of user loans by year: 
-MSG_CHOOSE_YEAR -@ Please choose the starting year -> 
+MSG_CHOOSE_YEAR -@ Please choose the starting year ->
+MSG_LOGGED_IN_AS -@ Logged in as: 
 PROMPT_FIRST_NAME -@ First name (please insert a valid first name): 
 PROMPT_LAST_NAME -@ Last name (please insert a valid last name): 
 PROMPT_USERNAME -@ Username: 
 PROMPT_PASSWORD -@ Password: 
-PROMPT_BIRTHDAY -@ Birthday (accepted format -@ DD/MM/YYYY): 
+PROMPT_BIRTHDAY -@ Birthday (accepted format: DD/MM/YYYY): 
 PROMPT_PRESENT_USER_MULTIPLE_CHOICE -@ (1) EXIT WITHOUT SAVING\t|\t(2) CHANGE FIELDS
 PROMPT_BIBLIO_INITIAL_CHOICES -@ (1) LOGIN\t|\t(2) SIGN UP\t|\t(3) EXIT
 PROMPT_OPERATOR_CHOICES -@ (1) ADD A MEDIA ITEM\t|\t(2) REMOVE A MEDIA ITEM\t|\t(3) SHOW MEDIA ITEMS BY FOLDER\t|\t(4) SEARCH FOR MEDIA ITEMS\t|\t(5) VISUALIZE DATA\t|\t(6) LOGOUT
