--- a/resources/languages/lang_ita.txt
+++ b/resources/languages/lang_ita.txt
@@ -26,12 +26,13 @@ MSG_LOANS_IN_YEAR -@ Numero di prestiti per anno solare:
 MSG_EXTENSIONS_IN_YEAR -@ Numero di proroghe per anno solare: 
 MSG_USER_LOANS_IN_YEAR -@ Numero di prestiti per utente per anno solare: 
 MSG_MOST_LENT_MEDIA_IN_YEAR -@ Media maggiormente concesso in prestito per anno solare: 
-MSG_CHOOSE_YEAR -@ Inserire l'anno di partenza -> 
+MSG_CHOOSE_YEAR -@ Inserire l'anno di partenza ->
+MSG_LOGGED_IN_AS -@ Collegato come: 
 PROMPT_FIRST_NAME -@ Nome (si prega di inserire un nome valido): 
 PROMPT_LAST_NAME -@ Cognome (si prega di inserire un cognome valido): 
 PROMPT_USERNAME -@ Username: 
 PROMPT_PASSWORD -@ Password: 
-PROMPT_BIRTHDAY -@ Compleanno (formato accettato -@ GG/MM/AAAA): 
+PROMPT_BIRTHDAY -@ Compleanno (formato accettato: GG/MM/AAAA): 
 PROMPT_PRESENT_USER_MULTIPLE_CHOICE -@ (1) USCIRE SENZA SALVARE\t|\t(2) CAMBIARE I CAMPI
 PROMPT_BIBLIO_INITIAL_CHOICES -@ (1) ENTRA\t|\t(2) REGISTRATI\t|\t(3) ESCI
 PROMPT_OPERATOR_CHOICES -@ (1) AGGIUNGI UN MEDIA\t|\t(2) RIMUOVI UN MEDIA\t|\t(3) MOSTRA I MEDIA PER CARTELLE\t|\t(4) CERCA MEDIA\t|\t(5) VISUALIZZA DATI\t|\t(6) ESCI
