FUNZIONA TUTTO (quello che ho testato).
- Corretto molti errorini, ad esempio sulla data di rinnovo dell'iscrizione.
- Finito di documentare.
- Migliorato i dettagli sull'iscrizione e rinnovo che compaiono una volta che si prova a rinnovare (e non si può).
- Migliorato i database (ora il generatore casuale genera anche utenti che si sono iscritti nel 2013 e quindi sono in prossimità di scadenza).
- Le proroghe funzionano, ho aggiunto messaggi di errore e di notifica vari.
- Tutto viene salvato.
- Corretto i file di testo dei titoli dei libri.

Direi che la versione 1 è terminata.

--- a/resources/languages/lang_eng.txt
+++ b/resources/languages/lang_eng.txt
@@ -26,8 +26,14 @@ MSG_LOANS_IN_YEAR -@ Number of loans by year:
 MSG_MOST_LENT_MEDIA_IN_YEAR -@ The most lent media by year: 
 MSG_EXTENSIONS_IN_YEAR -@ Number of extensions by year: 
 MSG_USER_LOANS_IN_YEAR -@ Number of user loans by year: 
-MSG_CHOOSE_YEAR -@ Please choose the starting year ->
+MSG_CHOOSE_YEAR -@ Please choose the starting year -> 
 MSG_LOGGED_IN_AS -@ Logged in as: 
+MSG_SUBSCRIPTION_RENEWAL_SUCCESSFUL -@ Subscription successfully renewed!
+MSG_SUBSCRIPTION_REMINDER -@ Reminder:\n\tYou subscribed on 
+MSG_LATEST_RENEWAL_REMINDER -@ \n\tYou last renewed on 
+MSG_EXPIRY_REMINDER -@ \n\tYour subscription expires on 
+MSG_RENEWAL_INFO -@ \n\tYou're not allowed to renew your subscription until 
+MSG_RENEWAL_INFO_END_OF_MESSAGE -@ before the expiry date.
 PROMPT_FIRST_NAME -@ First name (please insert a valid first name): 
 PROMPT_LAST_NAME -@ Last name (please insert a valid last name): 
 PROMPT_USERNAME -@ Username: 
@@ -36,7 +42,7 @@ PROMPT_BIRTHDAY -@ Birthday (accepted format: DD/MM/YYYY):
 PROMPT_PRESENT_USER_MULTIPLE_CHOICE -@ (1) EXIT WITHOUT SAVING\t|\t(2) CHANGE FIELDS
 PROMPT_BIBLIO_INITIAL_CHOICES -@ (1) LOGIN\t|\t(2) SIGN UP\t|\t(3) EXIT
 PROMPT_OPERATOR_CHOICES -@ (1) ADD A MEDIA ITEM\t|\t(2) REMOVE A MEDIA ITEM\t|\t(3) SHOW MEDIA ITEMS BY FOLDER\t|\t(4) SEARCH FOR MEDIA ITEMS\t|\t(5) VISUALIZE DATA\t|\t(6) LOGOUT
-PROMPT_DATA_VISUALIZATION_CHOICES -@ (1) SHOW ALL SUBSCRIBED USERS\t|\t(2) SHOW ALL LOANS\t|\t(3) SHOW THE NUMBER OF LOANS BY YEAR\t|\t(4) SHOW THE NUMBER OF LOANS BY USER AND YEAR\t|\t(5) SHOW THE NUMBER OF LOAN EXTENSIONS BY YEAR\t|\t(6) SHOW THE MOST LENT MEDIA ITEM
+PROMPT_DATA_VISUALIZATION_CHOICES -@ (1) SHOW ALL SUBSCRIBED USERS\t|\t(2) SHOW ALL LOANS\t|\t(3) SHOW THE NUMBER OF LOANS BY YEAR\t|\t(4) SHOW THE NUMBER OF LOANS BY USER AND YEAR\t|\n(5) SHOW THE NUMBER OF LOAN EXTENSIONS BY YEAR\t|\t(6) SHOW THE MOST LENT MEDIA ITEM\t|\t(7) QUIT
 PROMPT_CUSTOMER_CHOICES -@ (1) RENEW YOUR SUBSCRIPTION!\t|\t(2) REQUEST A LOAN\t|\t(3) EXTEND YOUR LOAN\t|\t(4) SEARCH FOR MEDIA ITEMS\t|\t(5) LOGOUT
 PROMPT_SIGN_UP_CONFIRMATION -@ Are you sure you want to submit this form? (y/n)
 PROMPT_REMOVE_CONFIRMATION -@ Are you sure you want to remove this media item? (y/n)
@@ -55,7 +61,7 @@ PROMPT_SEARCH_FOR_MEDIA -@ Please insert one or more keywords for the media item
 PROMPT_SEARCH_FOR_MEDIA_TO_BORROW -@ Please insert one or more keywords for the media item you'd like to borrow (insert !quit to quit): 
 PROMPT_REMOVE_MEDIA_ID -@ Please choose the ID for the item you wish to remove.
 PROMPT_SELECT_PATH -@ Please choose the folder path you wish to put the media item in by selecting the desired folders step by step.
-PROMPT_EXPIRY_IMMINENT -@ WARNING! SUBSCRIPTION EXPIRY IMMINENT!
+PROMPT_EXPIRY_IMMINENT -@ WARNING! SUBSCRIPTION EXPIRY IMMINENT! 
 PROMPT_WHICH_FOLDER -@ Please choose the path you wish to see the contents of, by selecting the desired folders step by step.
 PROMPT_BORROW_CONFIRMATION -@ Are you sure you want to borrow this media item? (y/n)
 PROMPT_SEARCH_FOR_LOANS -@ Here's the list of the media items you borrowed. Please select the media item whose loan you wish to extend.
@@ -82,10 +88,12 @@ ERR_INVALID_PATH -@ The path you inserted seems to be invalid. Please re-insert 
 ERR_PATH_NOT_PRESENT -@ The path you inserted doesn't exist.
 ERR_BORROW_FAILED -@ There has been an error while borrowing this media item.
 ERR_MEDIA_NOT_AVAILABLE -@ The selected media is not available at the moment.
-ERR_CANNOT_BORROW -@ Upper loan limit reached! It's not possible to borrow any more media items at the moment.
+ERR_CANNOT_BORROW -@ Upper loan limit reached for this type of media! It's not possible to borrow any more media items of this type at the moment.
 ERR_USER_NOT_PRESENT -@ The requested username couldn't be found. Please check the spelling or sign up.
 ERR_WRONG_PASSWORD -@ Wrong password.
 ERR_LOAN_LIST_EMPTY -@ There are no loans associated to this user.
-ERR_CANNOT_EXTEND -@ It's too early to extend this loan.
+ERR_TOO_EARLY_TO_EXTEND -@ It's too early to extend this loan.
+ERR_ALREADY_EXTENDED -@ This loan has already been extended once. You cannot repeat this operation.
 ERR_NO_LOANS_IN_YEAR -@ No loans were made in the year 
+ERR_LOAN_DOES_NOT_EXIST -@ You never borrowed the media item associated with this ID.
 SEPARATOR -@ -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
