--- a/resources/languages/lang_eng.txt
+++ b/resources/languages/lang_eng.txt
@@ -34,13 +34,15 @@ MSG_LATEST_RENEWAL_REMINDER -@ \n\tYou last renewed on
 MSG_EXPIRY_REMINDER -@ \n\tYour subscription expires on 
 MSG_RENEWAL_INFO -@ \n\tYou're not allowed to renew your subscription until 
 MSG_RENEWAL_INFO_END_OF_MESSAGE -@ before the expiry date.
+MSG_BOOK_WORD -@ book
+MSG_FILM_WORD -@ film
 PROMPT_FIRST_NAME -@ First name (please insert a valid first name): 
 PROMPT_LAST_NAME -@ Last name (please insert a valid last name): 
 PROMPT_USERNAME -@ Username: 
 PROMPT_PASSWORD -@ Password: 
 PROMPT_BIRTHDAY -@ Birthday (accepted format: DD/MM/YYYY): 
 PROMPT_PRESENT_USER_MULTIPLE_CHOICE -@ (1) EXIT WITHOUT SAVING\t|\t(2) CHANGE FIELDS
-PROMPT_BIBLIO_INITIAL_CHOICES -@ (1) LOGIN\t|\t(2) SIGN UP\t|\t(3) EXIT
+PROMPT_BIBLIO_INITIAL_CHOICES -@ (1) LOGIN\t|\t(2) SIGN UP\t|\t(3) SETTINGS\t|\t(4) EXIT
 PROMPT_OPERATOR_CHOICES -@ (1) ADD A MEDIA ITEM\t|\t(2) REMOVE A MEDIA ITEM\t|\t(3) SHOW MEDIA ITEMS BY FOLDER\t|\t(4) SEARCH FOR MEDIA ITEMS\t|\t(5) VISUALIZE DATA\t|\t(6) LOGOUT
 PROMPT_DATA_VISUALIZATION_CHOICES -@ (1) SHOW ALL SUBSCRIBED USERS\t|\t(2) SHOW ALL LOANS\t|\t(3) SHOW THE NUMBER OF LOANS BY YEAR\t|\t(4) SHOW THE NUMBER OF LOANS BY USER AND YEAR\t|\n(5) SHOW THE NUMBER OF LOAN EXTENSIONS BY YEAR\t|\t(6) SHOW THE MOST LENT MEDIA ITEM\t|\t(7) QUIT
 PROMPT_CUSTOMER_CHOICES -@ (1) RENEW YOUR SUBSCRIPTION!\t|\t(2) REQUEST A LOAN\t|\t(3) EXTEND YOUR LOAN\t|\t(4) SEARCH FOR MEDIA ITEMS\t|\t(5) LOGOUT
@@ -61,9 +63,9 @@ PROMPT_PUBLICATION_YEAR -@ Publication year:
 PROMPT_RELEASE_YEAR -@ Release year: 
 PROMPT_PUBLISHER_NAME -@ Publisher: 
 PROMPT_PRODUCER_NAME -@ Producer: 
-PROMPT_REMOVE_MEDIA -@ Please insert one or more keywords for the media item you wish to remove (insert !quit to quit): 
-PROMPT_SEARCH_FOR_MEDIA -@ Please insert one or more keywords for the media item you're looking for (insert !quit to quit): 
-PROMPT_SEARCH_FOR_MEDIA_TO_BORROW -@ Please insert one or more keywords for the media item you'd like to borrow (insert !quit to quit): 
+PROMPT_REMOVE_MEDIA -@ Please insert one or more keywords for the media item you wish to remove (insert !quit to exit this section): 
+PROMPT_SEARCH_FOR_MEDIA -@ Please insert one or more keywords for the media item you're looking for (insert !quit to exit this section): 
+PROMPT_SEARCH_FOR_MEDIA_TO_BORROW -@ Please insert one or more keywords for the media item you'd like to borrow (insert !quit to exit this section): 
 PROMPT_REMOVE_MEDIA_ID -@ Please choose the ID for the item you wish to remove.
 PROMPT_SELECT_PATH -@ Please choose the folder path you wish to put the media item in by selecting the desired folders step by step.
 PROMPT_EXPIRY_IMMINENT -@ WARNING! SUBSCRIPTION EXPIRY IMMINENT! 
@@ -71,6 +73,7 @@ PROMPT_WHICH_FOLDER -@ Please choose the path you wish to see the contents of, b
 PROMPT_BORROW_CONFIRMATION -@ Are you sure you want to borrow this media item? (y/n)
 PROMPT_SEARCH_FOR_LOANS -@ Here's the list of the media items you borrowed. Please select the media item whose loan you wish to extend.
 PROMPT_CHOOSE_MEDIA_TO_EXTEND -@ Please select the ID of the media whose loan you wish to extend.
+PROMPT_CHOOSE_LANGUAGE -@ Please choose the desired language.
 ERR_NOT_OF_AGE -@ Warning: user is underage. Please re-fill this form.
 ERR_INVALID_NAME -@ Looks like this name has an invalid format, please re-insert a valid name.
 ERR_INVALID_DATE -@ This birth date has an invalid format. Please re-insert a valid date.
@@ -103,4 +106,5 @@ ERR_ALREADY_EXTENDED -@ This loan has already been extended once. You cannot rep
 ERR_NO_LOANS_IN_YEAR -@ No loans were made in the year 
 ERR_LOAN_NOT_FOUND -@ Error! Loan not found.
 ERR_LOAN_DOES_NOT_EXIST -@ You never borrowed the media item associated with this ID.
+ERR_LANGUAGE_UNAVAILABLE -@ The language you chose is not available.
 SEPARATOR -@ -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
