--- a/resources/languages/lang_ita.txt
+++ b/resources/languages/lang_ita.txt
@@ -1,8 +1,9 @@
 ﻿- -@ -
-MSG_BIBLIO_NAME -@ BIBLIOTECA SMARTin4t0r 3.0
+MSG_LIBRARY_NAME -@ BIBLIOTECA SMART 3.0
 MSG_SIGN_UP_SUCCESSFUL -@ Registrazione avvenuta con successo. Benvenuto/a!
-MSG_EXIT_WITHOUT_SAVING -@ Uscendo senza salvare...
-MSG_GOODBYE -@ Uscita da BIBLIOTECA SMARTin4t0r 3.0 in corso... Arrivederci!
+MSG_EXIT_WITHOUT_SAVING -@ Uscita in corso senza salvare...
+MSG_EXITING -@ Uscita in corso da 
+MSG_GOODBYE -@ ... Arrivederci!
 MSG_LOG_OUT -@ Uscita in corso...
 MSG_USER_LIST -@ Ecco la lista di tutti gli utenti iscritti:
 MSG_MEDIA_LIST -@ Ecco la lista di tutti i media:
@@ -33,23 +34,23 @@ MSG_SUBSCRIPTION_REMINDER -@ Promemoria:\n\tHai effettuato l'iscrizione il giorn
 MSG_LATEST_RENEWAL_REMINDER -@ \n\tData dell'ultimo rinnovo: 
 MSG_EXPIRY_REMINDER -@ \n\tL'iscrizione scadrà il 
 MSG_RENEWAL_INFO -@ \n\tNon è consentito rinnovare l'iscrizione fino a 
-MSG_RENEWAL_INFO_END_OF_MESSAGE -@ prima della data della scadenza.
+MSG_RENEWAL_INFO_END_OF_MESSAGE -@ prima della data di scadenza.
 MSG_BOOK_WORD -@ libro
 MSG_FILM_WORD -@ film
 PROMPT_FIRST_NAME -@ Nome (si prega di inserire un nome valido): 
 PROMPT_LAST_NAME -@ Cognome (si prega di inserire un cognome valido): 
-PROMPT_USERNAME -@ Username: 
+PROMPT_USERNAME -@ Nome utente: 
 PROMPT_PASSWORD -@ Password: 
-PROMPT_BIRTHDAY -@ Compleanno (formato accettato: GG/MM/AAAA): 
+PROMPT_BIRTH_DATE -@ Data di nascita (formato accettato: GG/MM/AAAA): 
 PROMPT_PRESENT_USER_MULTIPLE_CHOICE -@ (1) USCIRE SENZA SALVARE\t|\t(2) CAMBIARE I CAMPI
-PROMPT_BIBLIO_INITIAL_CHOICES -@ (1) ENTRA\t|\t(2) REGISTRATI\t|\t(3) OPZIONI\t|\t(4) ESCI
+PROMPT_LIBRARY_INITIAL_CHOICES -@ (1) ENTRA\t|\t(2) REGISTRATI\t|\t(3) OPZIONI\t|\t(4) ESCI
 PROMPT_OPERATOR_CHOICES -@ (1) AGGIUNGI UN MEDIA\t|\t(2) RIMUOVI UN MEDIA\t|\t(3) MOSTRA I MEDIA PER CARTELLE\t|\t(4) CERCA MEDIA\t|\t(5) VISUALIZZA DATI\t|\t(6) ESCI
 PROMPT_DATA_VISUALIZATION_CHOICES -@ (1) MOSTRA TUTTI GLI UTENTI ISCRITTI\t|\t(2) MOSTRA TUTTI I PRESTITI EFFETTUATI\t|\t(3) MOSTRA NUMERO DI PRESTITI PER ANNO SOLARE\t|\t(4) MOSTRA NUMERO DI PRESTITI PER UTENTE E ANNO SOLARE\t|\n(5) MOSTRA NUMERO DI PROROGHE PER ANNO SOLARE\t|\t(6) MOSTRA IL MEDIA PIÙ PRESTATO\t|\t(7) ESCI
 PROMPT_CUSTOMER_CHOICES -@ (1) RINNOVA LA TUA ISCRIZIONE!\t|\t(2) RICHIEDI UN PRESTITO\t|\t(3) RICHIEDI UNA PROROGA\t|\t(4) CERCA UNA RISORSA\t|\t(5) ESCI
 PROMPT_SIGN_UP_CONFIRMATION -@ Confermi l'iscrizione? (y/n)
 PROMPT_REMOVE_CONFIRMATION -@ Confermi la rimozione? (y/n)
-PROMPT_LOGIN_SCREEN -@ Bentornato/a! Entra nella BIBLIOTECA SMARTin4t0r 3.0
-PROMPT_SIGN_UP_SCREEN -@ Ciao! Registrati alla BIBLIOTECA SMARTin4t0r 3.0
+PROMPT_LOGIN_SCREEN -@ Bentornato/a! Entra nella 
+PROMPT_SIGN_UP_SCREEN -@ Ciao! Registrati alla 
 PROMPT_MODIFY_FIELDS -@ Modificare i campi errati per favore.
 PROMPT_RETRY_LOGGING_IN -@ Si prega di riprovare ad entrare usando le credenziali corrette.
 PROMPT_CHOOSE_MEDIA_TYPE -@ Scegliere un tipo di media da aggiungere -> 
@@ -72,7 +73,8 @@ PROMPT_EXPIRY_IMMINENT -@ ATTENZIONE! SCADENZA ISCRIZIONE IMMINENTE!
 PROMPT_WHICH_FOLDER -@ Inserire il percorso di cui si vuole vedere il contenuto, selezionando volta per volta la cartella desiderata.
 PROMPT_BORROW_CONFIRMATION -@ Confermi il prestito? (y/n)
 PROMPT_SEARCH_FOR_LOANS -@ Ecco la lista dei media presi in prestito. Si prega di selezionare il media di cui si vuole prorogare il prestito.
-PROMPT_CHOOSE_MEDIA_TO_EXTEND -@ Scegliere l'ID del media di cui si vuole estendere il prestito.
+PROMPT_CHOOSE_MEDIA_TO_BORROW -@ Inserire l'ID del media che si vuole prendere in prestito -> 
+PROMPT_CHOOSE_MEDIA_TO_EXTEND -@ Inserire l'ID del media di cui si vuole estendere il prestito.
 PROMPT_CHOOSE_LANGUAGE -@ Si prega di scegliere la lingua desiderata.
 ERR_NOT_OF_AGE -@ Attenzione: l'utente è minorenne. Si prega di riempire i campi da capo.
 ERR_INVALID_NAME -@ Sembra che questo nome abbia un formato non valido, si prega di inserire nuovamente un nome valido.
